# VECTOR-CASE

./: .gitignore  CMakeLists.txt  C_interface_demo.py  LICENSE  README.md  factorial_lookup.h  fast_lookup_tables.h  generate_lookup_tables.py  inductance.py  inductance_far.h  inductance_far.hpp  inductance_fast.h  inductance_fast.hpp  inductance_naive.h  inductance_naive.hpp  inductance_near.h  inductance_near.hpp  inductance_remainder_bound.h  inductance_zupan.hpp  main.c  main.cpp  remainder_estimate.hpp  settings.h  structs.h  with_z.c  with_z.cpp
demo/: C_interface_demo.py
mathematica/: Near_inductance.nb  Zupan_intnegral.nb
python/: inductance.py
src/: gauss_legendre_lookup.h  generate_lookup_tables.py  inductance.h  inductance_far.h  inductance_fast.h  inductance_naive.h  inductance_near.h  inductance_remainder_bound.h  inductance_zupan.h  main.c  settings.h  structs.h  test.c
